--- a/docs/ktaketu.css
+++ b/docs/ktaketu.css
@@ -45,9 +45,23 @@ aside {
 	margin-right: 20px;
 }
 
-h1, h2 {
+h1 {
 	margin: 0;
     border-bottom: 1px solid #000000;
+}
+
+h2 {
+	margin: 0;
+    border-bottom: 1px solid #000000;
+}
+
+h2::before {
+	content: "";
+	display: inline;
+	width: 10px;
+	height: 40px;
+	padding-right: 20px;
+	background-color: rgb(0, 53, 122);
 }
 
 footer {
@@ -97,3 +111,29 @@ section::after {
     top: 50px;
     /* background: #ffe0ff; */
 }
+
+a:hover {
+	background-color: yellow;
+}
+
+.btn {
+	display: inline-block;
+	width: 50px;
+	height: 50px;
+	border-radius: 50%;
+	background-color: #555;
+	color: #fff;
+	text-align: center;
+	line-height: 50px;
+	font-size: 12px;
+	position: fixed;
+	bottom: 20px;
+	right: 20px;
+	cursor: pointer;
+	z-index: 100;
+  }
+  
+.btn:hover {
+	background-color: #333;
+}
+  
